# mazer-android

./: .gitignore  README.md  build.gradle.kts  install-on-device.sh  settings.gradle.kts  setup.sh
app/: build.gradle.kts
app/src/androidTest/java/com/jmisabella/mazeq/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mazer_jni.c
app/src/main/java/com/jmisabella/mazeq/: FFICell.kt.kt  MainActivity.kt  MazeNative.kt
app/src/main/java/com/jmisabella/mazeq/layout/: MazeCellAppearance.kt  MazeLayoutMetrics.kt
app/src/main/java/com/jmisabella/mazeq/models/: CellSize.kt  Coordinates.kt  HeatMapPalette.kt  HexDirection.kt  MazeAlgorithm.kt  MazeCell.kt  MazeDirection.kt  MazeRequest.kt  MazeRequestError.kt  MazeType.kt  MazerRequestError.kt
app/src/main/java/com/jmisabella/mazeq/screens/: MazeRenderScreen.kt  MazeRequestScreen.kt
app/src/main/java/com/jmisabella/mazeq/utility/: ColorHex.kt  MazeRequestValidator.kt
app/src/main/java/com/jmisabella/mazer/: FFICell.kt  MainActivity.kt  MazerNative.kt
app/src/main/java/com/jmisabella/mazer/layout/: MazeCellAppearance.kt  MazeLayoutMetrics.kt
app/src/main/java/com/jmisabella/mazer/models/: CellSize.kt  Coordinates.kt  HeatMapPalette.kt  HexDirection.kt  MazeAlgorithm.kt  MazeCell.kt  MazeDirection.kt  (+4 more)
app/src/main/res/drawable/: ic_arrow_down.xml  ic_arrow_up.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/jmisabella/mazeq/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+34 files in other folders)
